--- a/css/style-main.css
+++ b/css/style-main.css
@@ -150,6 +150,17 @@ iframe {
   border: none;
 }
 /* start Onload Popup */
+
+#boxes{
+   position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background: rgba(255,255,255,.6); */
+    z-index: 1001; 
+}
+
 #mask {
   position:absolute;
   left:0;
@@ -158,6 +169,7 @@ iframe {
   background-color:#26262c;
   display:none;
 }  
+
 #boxes .window {
   position:absolute;
   left:0;
@@ -177,6 +189,8 @@ iframe {
   background-color:#ffffff;
   font-size: 15pt;
 }
+
+
 
 .agree:hover{
   background-color: #D1D1D1;
@@ -9058,8 +9072,12 @@ a.button-pro:hover span {
 	
 	}
 
-
-
+  @media only screen and (max-width: 991px){
+     .mobile-hide {
+        display:none;
+  }
+}
+   
 
 
 
@@ -9249,7 +9267,7 @@ i#call {
 .mb--20{ margin-bottom:20px;}  
 
 #carousel{
-  margin-top:8px;
+  background-image: url("../images/bg-carousel.jpg");
 }
 
 #border{
